v4.0/examples/example-amanda-takes-the-stage.md
<!--
Amanda Takes the Stage, a poem

Written as reaction to poet Amanda Gorman's inaugural (Joe Biden, 2021-01-20)
recitation of "The Hill We Climb."

Copyright © 2021 Todd Warner

I customized this with a prose "scene" at the end that serves as a epilogue-ish
epigraph. Usually, I would put something like that in the title header of the
poem, but I wanted the context of the poem to be delayed for the reader.

Customizations:
- squashed the line spacing so that the ending epigraph is single spaced
  'normal'. Since there is no paragraph spacing, we had to add a couple
  &ZeroWidthSpace; lines in there to space things out manually. Maybe someday
  I will have a switch set up to do this more automatically.
- Turned off indenting 'no-indent' and page-breaking 'no-break' for the scene.
- Added space between the poem and the epigraph with a .5in margin just to give
  it some air.

Drafted 2021-01-21
Published 2023-11-18 — County Lines, a Literary Journal, volume 11, 2024
-->

<style>
    @import url("https://toddwarner.io/pub/css/manuscript-css/manuscript.css");
    /*
    @import url("../../manuscript-local.css");
    @import url("../../manuscript-local-beta.css");
    */
    :root {	--m-line-spacing: normal; }
    .m-scene {
        font-size: 85%;
        margin-block-start: .5in;
        line-height: normal; /* redundant (see :root) but left as an example */
    }
</style>

<div id="vpage">
<article id="manuscript" class="poetry">

<section class="m-poem">

<div class="m-page-header">
<div class="m-contact">

Todd Warner

North Carolina Piedmont, USA

todd@toddwarner.io

</div><div class="m-facts">

26 lines (+2 line epigraph)  
poem, panegyric  
<small>_1st 20210121, rev. 20230614, pub. 20231118_</small>

</div></div>

<div class="m-title-header">

# Amanda Takes the Stage

</div>


```
She arrives resplendent.

Her coat a radiant yellow,
a beacon of light promising solace after a time of darkness and sorrow.

Her hair, a tower of braids bound by a bold band of red,
a conduit for youthful energy linking the heavens to the Earth.
```

```
Amanda takes the stage.

A waif of a girl, yet intimidating,
imposing but for eyes radiating intelligence and kindness.

Quietly, she inhales.
We wait—our breath bated.
```

```
She speaks.

Her words flow with a subtle rhythm,
like a warm breeze meandering between the trees.

She speaks of danger,
    but dangers averted.

She speaks of failure,
    but failures acknowledged, illuminating a new path forward.

She speaks of division,
    but divisions reparable.

She speaks of despair,
    but despair relegated to a dark corner by a floodlight of hope.
```

```
With these words,
she lifts a nation reeling from years of lost optimism.

With these words,
    this cynic . . .
        believes her.
```


</section>
<section class="m-scene no-indent no-break">

—

&ZeroWidthSpace;

On January 20, 2021, Amanda Gorman lit up the nation with her spoken-word poem,
"The Hill We Climb," written and recited for the inauguration of the 46th
president of the United States, Joe Biden (Washington, DC).

&ZeroWidthSpace;

Copyright © 2021 Todd Warner

</section>
</article></div>

